FISH-8652 Restore 5.3 version of AsyncServerSocketMetrics
Reverts the changes made to this class in b2465988ed47742c659ba3d4eb6eaeda941440e4, with the exception of retaining the throwing of ExceptionInInitializerError instead of a generic RuntimeException

Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>